   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Updated book examples based on the printed "Restlet in Action" book.
    - Fixed character set issue with FreeMarker templates.
      Contributed by Martin Svensson.
	- Fixed error in OData pagination support.
	  Reported by Tiago Martins.

- 2.0.15 (2012-08-23)
    - Bug fixed
       - Fixed bug in Reference#getParentRef with relative URIs.
         Reported by Christian Bauer.
       - Fixed closing issue with pipes used by BioUtils.getReader
         and getInputStream methods.
       - Fixed concurrency bug upon application start or strop that could
         cause errors such as "no Restlet defined to process calls. Maybe it
         wasn't properly started" errors (500). Reported by several persons 
         including David Fuchs, Danny Leshem, Yunwu Zhu and Bjorn Roche.
       - Fixed range issue that leads to generate a Response having a 
         Content-length greater than actual content with range request.
       - Fixed security issue that could allow JavaScript injection 
         inside entities of error reponses. Reported by Danny Leshem.
       - Fixed potential threading/pipe issues with OutputRepresentation
         and WriterRepresentation classes.
       - Fixed range computation issue.
       - Fixed Turtle BNode parsing (RDF extension).
         Contributed by Christophe Gueret.
       - MemoryRealm now copies the properties from the reference user in the 
         realm to the User object set in Request.clientInfo.
         Reported by Peter Ansell.
       - SecretVerifier now consider two 'null' secrets as not comparable.
       - Fixed client proxy media type preferences, when repeated calls 
         are done, which may lead to a status 413 response.
       - Fixed case sensitivity issue with query parameters in JAX-RS 
         extension. Reported by Mark Kharitonov.
    - Misc
       - Reverted Role equality test to default Java object equality as